fix overflow

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -73,7 +73,7 @@
 .editorGrid {
   grid-column: 2;
   display: grid;
-  width: 70%;
+  width: 65%;
   aspect-ratio: 1/1;
   grid-template-columns: auto;
   grid-template-rows: auto;
